crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__enum_constant_arguments_and_bodies.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
enum Mode { BASIC, @Marker SPECIAL(helper(1), new Box()) { void run() {} } }

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    EnumDeclaration
      EnumKw "enum" @ 0..4 trailing=[Whitespace " "]
      Identifier "Mode" @ 5..9 trailing=[Whitespace " "]
      EnumBody
        LBrace "{" @ 10..11 trailing=[Whitespace " "]
        EnumConstantList
          EnumConstant
            AnnotationList
            Identifier "BASIC" @ 12..17
          Comma "," @ 17..18 trailing=[Whitespace " "]
          EnumConstant
            AnnotationList
              Annotation
                At "@" @ 19..20
                Name
                  Identifier "Marker" @ 20..26 trailing=[Whitespace " "]
            Identifier "SPECIAL" @ 27..34
            ArgumentList
              LParen "(" @ 34..35
              ExpressionList
                MethodInvocationExpression
                  UnqualifiedMethodInvocation
                    NameExpression
                      Identifier "helper" @ 35..41
                    ArgumentList
                      LParen "(" @ 41..42
                      ExpressionList
                        LiteralExpression
                          IntegerLiteral "1" @ 42..43
                      RParen ")" @ 43..44
                Comma "," @ 44..45 trailing=[Whitespace " "]
                ObjectCreationExpression
                  NewKw "new" @ 46..49 trailing=[Whitespace " "]
                  ClassType
                    ClassTypeSegmentList
                      ClassTypeSegmentNode
                        AnnotationList
                        Name
                          Identifier "Box" @ 50..53
                  ArgumentList
                    LParen "(" @ 53..54
                    ExpressionList
                    RParen ")" @ 54..55
              RParen ")" @ 55..56 trailing=[Whitespace " "]
            ClassBody
              LBrace "{" @ 57..58 trailing=[Whitespace " "]
              ClassBodyMemberList
                MethodDeclaration
                  VoidType
                    VoidKw "void" @ 59..63 trailing=[Whitespace " "]
                  Identifier "run" @ 64..67
                  LParen "(" @ 67..68
                  RParen ")" @ 68..69 trailing=[Whitespace " "]
                  Block
                    LBrace "{" @ 70..71
                    BlockStatementList
                    RBrace "}" @ 71..72 trailing=[Whitespace " "]
              RBrace "}" @ 73..74 trailing=[Whitespace " "]
        ClassBodyMemberList
        RBrace "}" @ 75..76
  Eof "" @ 77..77 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
