crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__enum_constant_comments.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
enum Color {
  // warm
  RED /* primary */, // red
  BLUE
}

enum WithMembers {
  RED, // before members
  ;

  int code;
}

enum WithBlockMembers {
  RED, /* before members */
  ;

  int code;
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    EnumDeclaration
      EnumKw "enum" @ 0..4 trailing=[Whitespace " "]
      Identifier "Color" @ 5..10 trailing=[Whitespace " "]
      EnumBody
        LBrace "{" @ 11..12
        EnumConstantList
          EnumConstant
            AnnotationList
            Identifier "RED" @ 25..28 leading=[Newline "\n", Whitespace "  ", LineComment "// warm", Newline "\n", Whitespace "  "] trailing=[Whitespace " ", BlockComment "/* primary */"]
          Comma "," @ 42..43 trailing=[Whitespace " ", LineComment "// red"]
          EnumConstant
            AnnotationList
            Identifier "BLUE" @ 53..57 leading=[Newline "\n", Whitespace "  "]
        ClassBodyMemberList
        RBrace "}" @ 58..59 leading=[Newline "\n"]
    EnumDeclaration
      EnumKw "enum" @ 61..65 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Identifier "WithMembers" @ 66..77 trailing=[Whitespace " "]
      EnumBody
        LBrace "{" @ 78..79
        EnumConstantList
          EnumConstant
            AnnotationList
            Identifier "RED" @ 82..85 leading=[Newline "\n", Whitespace "  "]
          Comma "," @ 85..86 trailing=[Whitespace " ", LineComment "// before members"]
        Semicolon ";" @ 107..108 leading=[Newline "\n", Whitespace "  "]
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 112..115 leading=[Newline "\n", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "code" @ 116..120
            Semicolon ";" @ 120..121
        RBrace "}" @ 122..123 leading=[Newline "\n"]
    EnumDeclaration
      EnumKw "enum" @ 125..129 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Identifier "WithBlockMembers" @ 130..146 trailing=[Whitespace " "]
      EnumBody
        LBrace "{" @ 147..148
        EnumConstantList
          EnumConstant
            AnnotationList
            Identifier "RED" @ 151..154 leading=[Newline "\n", Whitespace "  "]
          Comma "," @ 154..155 trailing=[Whitespace " ", BlockComment "/* before members */"]
        Semicolon ";" @ 179..180 leading=[Newline "\n", Whitespace "  "]
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 184..187 leading=[Newline "\n", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "code" @ 188..192
            Semicolon ";" @ 192..193
        RBrace "}" @ 194..195 leading=[Newline "\n"]
  Eof "" @ 196..196 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
